<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_sendEmail"
        android:title="@string/menu_sendEmail"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_sendSMS"
        android:title="@string/menu_sendSMS"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_cycleCamera"
        android:title="@string/menu_cycleCamera"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_convertUnits"
        android:title="@string/menu_convertUnits"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
